--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@
   background-color: rgba(0, 123, 255, 0.1);
 }
 
+.table-cell.drag-start {
+  outline: 2px solid #0077ff;
+  z-index: 2;
+}
+
 .table-cell input {
   width: 100%;
   height: 100%;
